Fix spacing (#10)

--- a/x-pack/plugins/spaces/public/views/nav_control/components/spaces_menu.less
+++ b/x-pack/plugins/spaces/public/views/nav_control/components/spaces_menu.less
@@ -2,3 +2,8 @@
   max-height: 320px;
   overflow-y: auto;
 }
+
+.spacesMenu__searchFieldWrapper,
+.spacesMenu__manageButtonWrapper {
+  padding: 12px;
+}
